# hl-rs

./: .env.example  Cargo.toml  README.md  claude.md  output.md  prompt.md
examples/: bridge_usdc_spot_to_evm.rs  builder_codes.rs  convert_to_multisig_user.rs  enable_big_blocks.rs  multisig_order.rs  multisig_spot_transfer.rs  multisig_spot_transfer_external_signer.rs  place_order.rs  send_asset.rs  spot_transfer_kntq.rs  sub_account_spot_transfer.rs  user_set_abstraction.rs  ws_trades.rs
examples/perp-deploy-enable-growth-mode/: Cargo.toml
examples/perp-deploy-enable-growth-mode/src/: main.rs
examples/perp-deploy-register-asset/: Cargo.toml
examples/perp-deploy-register-asset-existing-dex/: Cargo.toml
examples/perp-deploy-register-asset-existing-dex/src/: main.rs
examples/perp-deploy-register-asset-new-dex/: Cargo.toml
examples/perp-deploy-register-asset-new-dex/src/: main.rs
examples/perp-deploy-register-asset/src/: main.rs
examples/perp-deploy-set-funding-interest-rates/: Cargo.toml
examples/perp-deploy-set-funding-interest-rates/src/: main.rs
examples/perp-deploy-set-margin-table-ids/: Cargo.toml
examples/perp-deploy-set-margin-table-ids/src/: main.rs
examples/perp-deploy-set-oi-caps/: Cargo.toml
examples/perp-deploy-set-oi-caps/src/: main.rs
examples/perp-deploy-set-oracle/: Cargo.toml
examples/perp-deploy-set-oracle/src/: main.rs
examples/perp-deploy-toggle-trading/: Cargo.toml
examples/perp-deploy-toggle-trading/src/: main.rs
examples/perp_deploy/: disable_dex.rs  enable_growth_mode.rs  migrate_dex_quote_token.rs  register_asset_existing_dex.rs  register_asset_new_dex.rs  set_funding_interest_rates.rs  set_margin_modes.rs  set_margin_table_ids.rs  set_oi_caps.rs  set_oracle.rs  set_perp_annotation.rs  toggle_trading.rs
examples/spot_deploy/: enable_freeze_privilege.rs  enable_quote_token.rs  finalize_evm_contract.rs  freeze_user.rs  genesis.rs  register_hyperliquidity.rs  register_spot.rs  register_token.rs  request_evm_contract.rs  revoke_freeze_privilege.rs  set_deployer_fees.rs  user_genesis.rs
hl-rs-derive/: Cargo.toml
hl-rs-derive/src/: l1_action.rs  lib.rs  user_signed_action.rs
src/: consts.rs  eip712.rs  error.rs  http.rs  improvements.rs  lib.rs  prelude.rs  types.rs
src/actions/: mod.rs  multisig.rs  serialization.rs  signing.rs  traits.rs
src/actions/l1_actions/: claim_rewards.rs  mod.rs  reserve_request_weight.rs
src/actions/l1_actions/perp_deploy/: disable_dex.rs  migrate_dex_quote_token.rs  mod.rs  register_asset.rs  set_fee_scale.rs  set_funding_interest_rates.rs  set_margin_modes.rs  set_perp_annotation.rs  set_sub_deployers.rs
src/actions/l1_actions/spot_deploy/: enable_freeze_privilege.rs  enable_quote_token.rs  finalize_evm_contract.rs  freeze_user.rs  mod.rs  request_evm_contract.rs  revoke_freeze_privilege.rs
src/actions/l1_actions/trading/orders/: cancel.rs  cancel_by_cloid.rs  modify.rs  order.rs
src/actions/user_signed_actions/: convert_to_multisig_user.rs  mod.rs  user_set_abstraction.rs
src/clients/: mod.rs
src/clients/exchange/: action.rs  action_kind.rs  action_v2.rs  builder.rs  client.rs  client_builder.rs  mod.rs
src/clients/exchange/action_v2/: action_v2_impls.rs  perp_deploy.rs  perp_deploy_v2.rs
src/clients/exchange/requests/: orders.rs
src/clients/exchange/requests/actions/: mod.rs  perp_deploy.rs
src/clients/exchange/responses/: mod.rs
src/clients/exchange/types/: mod.rs  perp_deploy.rs
src/clients/info/: client.rs  client_builder.rs  mod.rs
src/clients/info/types/: request.rs  response.rs
src/clients/ws/: message.rs  mod.rs  responses.rs  subscription.rs
src/utils/: conversion.rs  mod.rs  signing.rs
tests/: action_v2.rs  integration_perp_deploy.rs  integration_trading.rs
tests/integration/: ws_active_asset_ctx.rs  ws_l2_book_snapshot.rs
