[package]
name = "hl-rs"
version = "0.1.0"
edition = "2021"
description = "Hyperliquid Rust SDK"
authors = ["mektigboy"]
license = "MIT"
repository = "https://github.com/kinetiq-research/hl-rs"
documentation = "https://hyperliquid.gitbook.io/hyperliquid-docs/for-developers/api"
keywords = ["hyperliquid", "hl", "sdk", "rust"]
categories = ["api-bindings"]

[features]
default = []
custom-signing-chain = []
integration-tests = []

[dependencies]
alloy = "1.1.1"
alloy-signer = { version = "1.1.1", features = ["eip712"] }
chrono = "0.4.42"
dotenv = "0.15.0"
env_logger = "0.11.8"
error-stack = "0.6.0"
k256 = "0.13.4"
lazy_static = "1.5.0"
log = "0.4.28"
reqwest = "0.12.24"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.43"
uuid = { version = "1.18.1", features = ["v4"] }
derive_builder = "0.20.2"
rust_decimal = { version = "1.36.0", features = ["serde"] }
rust_decimal_macros = "1.36.0"
hl-rs-derive = { path = "hl-rs-derive" }

[workspace]
members = ["hl-rs-derive"]

[[example]]
name = "perp-deploy-register-asset-existing-dex"
path = "examples/perp-deploy-register-asset-existing-dex/src/main.rs"

[[example]]
name = "perp-deploy-enable-growth-mode"
path = "examples/perp-deploy-enable-growth-mode/src/main.rs"

[[example]]
name = "perp-deploy-set-oi-caps"
path = "examples/perp-deploy-set-oi-caps/src/main.rs"

[[example]]
name = "perp-deploy-set-funding-interest-rates"
path = "examples/perp-deploy-set-funding-interest-rates/src/main.rs"

[[example]]
name = "perp-deploy-toggle-trading"
path = "examples/perp-deploy-toggle-trading/src/main.rs"