[package]
name = "hl-rs"
version = "0.1.0"
edition = "2021"
description = "Hyperliquid Rust SDK"
authors = ["mektigboy"]
license = "MIT"
repository = "https://github.com/kinetiq-research/hl-rs"
documentation = "https://hyperliquid.gitbook.io/hyperliquid-docs/for-developers/api"
keywords = ["hyperliquid", "hl", "sdk", "rust"]
categories = ["api-bindings"]

[features]
default = []
custom-signing-chain = []
integration-tests = []

[dependencies]
alloy = "1.1.1"
alloy-signer = { version = "1.1.1", features = ["eip712"] }
chrono = "0.4.42"
dotenv = "0.15.0"
env_logger = "0.11.8"
error-stack = "0.6.0"
k256 = "0.13.4"
lazy_static = "1.5.0"
log = "0.4.28"
reqwest = "0.12.24"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.43"
uuid = { version = "1.18.1", features = ["v4"] }
derive_builder = "0.20.2"
rust_decimal = { version = "1.36.0", features = ["serde"] }
rust_decimal_macros = "1.36.0"
hl-rs-derive = { path = "hl-rs-derive" }

# Perp deploy examples live in examples/perp_deploy/; paths are explicit
# because Cargo only auto-discovers examples/*.rs at the top level.
[[example]]
name = "enable_growth_mode"
path = "examples/perp_deploy/enable_growth_mode.rs"
[[example]]
name = "register_asset_existing_dex"
path = "examples/perp_deploy/register_asset_existing_dex.rs"
[[example]]
name = "register_asset_new_dex"
path = "examples/perp_deploy/register_asset_new_dex.rs"
[[example]]
name = "set_funding_interest_rates"
path = "examples/perp_deploy/set_funding_interest_rates.rs"
[[example]]
name = "set_oi_caps"
path = "examples/perp_deploy/set_oi_caps.rs"
[[example]]
name = "set_oracle"
path = "examples/perp_deploy/set_oracle.rs"
[[example]]
name = "set_sub_deployers"
path = "examples/perp_deploy/set_sub_deployers.rs"
[[example]]
name = "toggle_trading"
path = "examples/perp_deploy/toggle_trading.rs"
[[example]]
name = "set_margin_table_ids"
path = "examples/perp_deploy/set_margin_table_ids.rs"
[[example]]
name = "set_margin_modes"
path = "examples/perp_deploy/set_margin_modes.rs"

[workspace]
members = ["hl-rs-derive"]